add border radius for clients block

--- a/assets/sass/_services.scss
+++ b/assets/sass/_services.scss
@@ -6,6 +6,7 @@
   padding-bottom: 60px;
   position: relative;
   margin-bottom: 50px;
+  border-radius: 0 0 12px 12px;
 
   &::before {
     content: " ";
