--- a/assets/sass/_clients.scss
+++ b/assets/sass/_clients.scss
@@ -1,14 +1,5 @@
 @use "variables";
 
-@mixin addBorderRadiusEachAngle(
-  $topLeft,
-  $topRight,
-  $bottomRight,
-  $bottomLeft
-) {
-  border-radius: $topLeft $topRight $bottomRight $bottomLeft;
-}
-
 .clients-title {
   font-weight: 700;
   font-size: 14px;
@@ -85,27 +76,16 @@
 }
 
 @media (min-width: map-get(variables.$screen-size, "desktop")) {
+  .clients-list {
+    border-radius: 12px;
+    overflow: hidden;
+  }
+
   .client-wrapper {
     width: 1720px;
   }
 
   .client {
     width: 430px;
-  }
-
-  .client:first-child {
-    @include addBorderRadiusEachAngle(12px, 0, 0, 0);
-  }
-
-  .client:last-child {
-    @include addBorderRadiusEachAngle(0, 0, 12px, 0);
-  }
-
-  .client:nth-child(4) {
-    @include addBorderRadiusEachAngle(0, 12px, 0, 0);
-  }
-
-  .client:nth-child(9) {
-    @include addBorderRadiusEachAngle(0, 0, 0, 12px);
   }
 }
