--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -404,6 +404,7 @@ body {
   padding-bottom: 60px;
   position: relative;
   margin-bottom: 50px;
+  border-radius: 0 0 12px 12px;
 }
 .services::before {
   content: " ";
@@ -527,7 +528,7 @@ body {
 }
 
 .client-page {
-  height: inherit;
+  height: 100%;
   width: 100%;
   display: flex;
   align-items: center;
@@ -613,23 +614,15 @@ body {
   }
 }
 @media (min-width: 1920px) {
+  .clients-list {
+    border-radius: 12px;
+    overflow: hidden;
+  }
   .client-wrapper {
     width: 1720px;
   }
   .client {
     width: 430px;
-  }
-  .client:first-child {
-    border-radius: 12px 0 0 0;
-  }
-  .client:last-child {
-    border-radius: 0 0 12px 0;
-  }
-  .client:nth-child(4) {
-    border-radius: 0 12px 0 0;
-  }
-  .client:nth-child(9) {
-    border-radius: 0 0 0 12px;
   }
 }
 
