Add padding to section to hide shadow of the main section in it

--- a/assets/sass/_scaffolder.scss
+++ b/assets/sass/_scaffolder.scss
@@ -14,9 +14,18 @@ body {
   margin-left: auto;
 }
 
+.main-section {
+  padding-bottom: 20px;
+  margin-bottom: 30px;
+}
+
 @media (min-width: map-get(variables.$screen-size, "tablet")) {
   .wrapper {
     width: map-get(variables.$wrapper-size, "tablet");
+  }
+
+  .main-section {
+    margin-bottom: 60px;
   }
 }
 
