--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -16,3 +16,9 @@ $client-background: (
   "artPrint": #1D4568,
   "ultimateCard": #000000,
 );
+
+$article-image: (
+ "equity": "../images/articles/equity-associate.png",
+ "gdpr": "../images/articles/gdpr.png",
+ "millennial": "../images/articles/millennial-testament.png"
+);
