--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -331,7 +331,6 @@ body {
 
 .main-section {
   padding-bottom: 20px;
-  margin-bottom: 30px;
 }
 
 .wrapper {
@@ -341,9 +340,6 @@ body {
 }
 
 @media (min-width: 768px) {
-  .main-section {
-    margin-bottom: 60px;
-  }
   .wrapper {
     padding-left: 60px;
     padding-right: 60px;
@@ -403,6 +399,10 @@ body {
 
 @media (min-width: 768px) {
   .section-title {
+    font-size: 38px;
+    line-height: 46px;
+  }
+  .services .section-title {
     margin-bottom: 60px;
   }
 }
@@ -606,6 +606,9 @@ body {
   }
 }
 @media (min-width: 1920px) {
+  .clients {
+    padding-bottom: 60px;
+  }
   .clients-list {
     border-radius: 12px;
     overflow: hidden;
@@ -615,6 +618,172 @@ body {
     margin-left: auto;
     margin-right: auto;
   }
+}
+.squad {
+  padding-top: 30px;
+  padding-bottom: 60px;
+}
+
+.team-member-card {
+  margin-bottom: 30px;
+  border-radius: 12px;
+  overflow: hidden;
+}
+
+.team-member-photo {
+  height: 500px;
+  background-image: url("../images/squad/oleksandr-oleksandrovskiy.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.team-member-details {
+  padding: 30px;
+  background-color: #F5F5FA;
+}
+
+.team-member-details p {
+  margin-top: 0;
+  margin-bottom: 0;
+  color: #B3B3BA;
+}
+
+.team-member-name {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 6px;
+}
+
+.team-member-position {
+  font-size: 14px;
+  line-height: 22px;
+}
+
+.squad .section-link {
+  margin-bottom: 5px;
+}
+
+.slider {
+  display: flex;
+  justify-content: center;
+}
+
+.team-member-slide:not(:last-child) {
+  margin-right: 15px;
+}
+
+.team-member-slide {
+  height: 16px;
+  width: 16px;
+  background-color: #24A3FF;
+  opacity: 0.2;
+  border: none;
+  border-radius: 50%;
+}
+
+.team-member-slide.active {
+  opacity: 1;
+}
+
+@media (min-width: 1024px) {
+  .squad {
+    padding-top: 60px;
+  }
+}
+@media (min-width: 1024px) {
+  .team-member-card {
+    display: flex;
+  }
+  .team-member-photo {
+    height: auto;
+    width: 400px;
+  }
+  .team-member-details {
+    width: calc(100% - 400px);
+  }
+}
+.publications {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #F5F5FA;
+}
+
+.article-banner {
+  height: 200px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.art-equity {
+  background-image: url("../images/articles/equity-associate.png");
+}
+
+.art-gdpr {
+  background-image: url("../images/articles/gdpr.png");
+}
+
+.art-millennial {
+  background-image: url("../images/articles/millennial-testament.png");
+}
+
+.article-page {
+  text-decoration: none;
+  display: block;
+  margin-bottom: 30px;
+}
+
+.article-page:last-child {
+  margin-bottom: 0;
+}
+
+.article {
+  border-radius: 8px;
+  overflow: hidden;
+  background-color: #FFFFFF;
+}
+
+.article:last-child {
+  margin-bottom: 0;
+}
+
+.article-details {
+  padding: 30px;
+}
+
+.article-meta {
+  border-bottom: 4px solid #E6E6F0;
+  margin-bottom: 15px;
+}
+
+.article-title {
+  margin-top: 0;
+  margin-bottom: 15px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  color: #24A3FF;
+}
+
+.publication-date {
+  margin-top: 0;
+  margin-bottom: 15px;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #B3B3BA;
+}
+
+.article-preview {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 14px;
+  line-height: 22px;
+  color: #000000;
 }
 
 /*# sourceMappingURL=style.css.map */
