--- a/assets/sass/_clients.scss
+++ b/assets/sass/_clients.scss
@@ -60,6 +60,10 @@
 }
 
 @media (min-width: map-get(variables.$screen-size, "desktop")) {
+  .clients {
+    padding-bottom: 60px;
+  }
+
   .clients-list {
     border-radius: 12px;
     overflow: hidden;
