--- a/assets/sass/_squad.scss
+++ b/assets/sass/_squad.scss
@@ -64,6 +64,7 @@ $team-member-picture-width-netbook: 400px;
   opacity: 0.2;
   border: none;
   border-radius: 50%;
+  cursor: pointer;
 }
 
 .team-member-slide.active {
