--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -681,6 +681,7 @@ body {
   opacity: 0.2;
   border: none;
   border-radius: 50%;
+  cursor: pointer;
 }
 
 .team-member-slide.active {
@@ -732,7 +733,6 @@ body {
 .article-page {
   text-decoration: none;
   display: block;
-  margin-bottom: 30px;
 }
 
 .article-page:last-child {
@@ -743,6 +743,7 @@ body {
   border-radius: 8px;
   overflow: hidden;
   background-color: #FFFFFF;
+  margin-bottom: 30px;
 }
 
 .article:last-child {
@@ -784,6 +785,34 @@ body {
   font-size: 14px;
   line-height: 22px;
   color: #000000;
+}
+
+@media (min-width: 768px) {
+  .articles {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  .article {
+    width: calc(50% - 15px);
+  }
+  .article:last-child {
+    width: 100%;
+  }
+}
+@media (min-width: 1024px) {
+  .articles {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+  }
+  .article {
+    width: calc(33.33% - 20px);
+    margin-bottom: 0;
+  }
+  .article:last-child {
+    width: calc(33.33% - 20px);
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
