--- a/assets/sass/_scaffolder.scss
+++ b/assets/sass/_scaffolder.scss
@@ -14,6 +14,14 @@ body {
   max-width: map-get(variables.$screen-size, "desktop");
 }
 
+.top-section {
+  padding-bottom: 20px;
+}
+
+.group-top-sections {
+  background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
+}
+
 @media (min-width: map-get(variables.$screen-size, "tablet")) {
 
   .wrapper {
