--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -335,6 +335,14 @@ body {
   max-width: 1920px;
 }
 
+.top-section {
+  padding-bottom: 20px;
+}
+
+.group-top-sections {
+  background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
+}
+
 @media (min-width: 768px) {
   .wrapper {
     padding-left: 60px;
@@ -403,7 +411,6 @@ body {
   }
 }
 .services {
-  background: linear-gradient(228.57deg, #323264 11.93%, #323264 57.17%, #643E72 87.46%);
   padding-bottom: 60px;
   position: relative;
   border-radius: 0 0 12px 12px;
@@ -808,6 +815,148 @@ body {
   }
   .article:last-child {
     width: calc(33.33% - 20px);
+  }
+}
+.wrapper.wrap-offers {
+  padding-right: 0;
+  padding-left: 0;
+}
+
+.offers {
+  padding-bottom: 30px;
+}
+
+.offers-list {
+  display: flex;
+  padding-bottom: 30px;
+  flex-wrap: nowrap;
+  overflow: auto;
+}
+.offers-list::-webkit-scrollbar {
+  display: none;
+}
+
+.offer {
+  height: 37px;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 37px;
+  color: #B3B3BA;
+  white-space: nowrap;
+  margin-left: 30px;
+}
+.offer-active {
+  background: linear-gradient(90.13deg, #EF8080 0.84%, #F0145A 99.96%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.offer-active:hover {
+  background: #F0145A;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.offer:hover {
+  color: #F0145A;
+}
+
+.offer-content {
+  padding-top: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
+  border-top: 4px solid rgba(255, 255, 255, 0.3);
+}
+
+.offer-title {
+  margin-top: 0;
+  margin-bottom: 30px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 24px;
+  color: #FFFFFF;
+}
+
+.offer-description {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 19px;
+  line-height: 30px;
+  color: #FFFFFF;
+}
+
+@media (min-width: 768px) {
+  .offers {
+    padding-bottom: 60px;
+  }
+  .offer:first-child {
+    margin-left: 60px;
+  }
+  .offer-title {
+    font-size: 30px;
+    line-height: 37px;
+  }
+  .offer-content {
+    padding-top: 60px;
+    margin-left: 60px;
+    margin-right: 60px;
+  }
+}
+@media (min-width: 1024px) {
+  .offers {
+    padding-bottom: 75px;
+  }
+  .offer-card {
+    display: flex;
+  }
+  .offers-list {
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    padding-right: 60px;
+    padding-bottom: 0;
+    overflow: unset;
+  }
+  .offer {
+    margin-left: 0;
+  }
+  .offer:not(:last-child) {
+    margin-bottom: 30px;
+  }
+  .offer:first-child {
+    margin-left: 0;
+  }
+  .offer-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-top: none;
+    border-left: 4px solid rgba(255, 255, 255, 0.3);
+    padding-top: 0;
+    padding-left: 60px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .offer-title {
+    margin-bottom: 30px;
+  }
+  .wrapper.wrap-offers {
+    padding-right: 60px;
+    padding-left: 60px;
+  }
+}
+@media (min-width: 1440px) {
+  .wrapper.wrap-offers {
+    padding-right: 180px;
+    padding-left: 180px;
+  }
+}
+@media (min-width: 1920px) {
+  .wrapper.wrap-offers {
+    padding-right: 280px;
+    padding-left: 280px;
   }
 }
 
