Add footer and modal window

--- a/assets/sass/_offers.scss
+++ b/assets/sass/_offers.scss
@@ -31,6 +31,7 @@
   color: #B3B3BA;
   white-space: nowrap;
   margin-left: 30px;
+  cursor: pointer;
 
   &-active {
     background: linear-gradient(90.13deg, #EF8080 0.84%, #F0145A 99.96%);
