--- a/assets/sass/_service-modal.scss
+++ b/assets/sass/_service-modal.scss
@@ -1,8 +1,21 @@
-
 @mixin getPlaceholderStyles() {
   font-size: 16px;
   line-height: 26px;
   color: #B3B3BA;
+}
+
+.layer {
+  background-color: rgba(50, 50, 100, 0.7);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: none;
+}
+
+.layer-show {
+  display: block;
 }
 
 .service-modal {
@@ -11,7 +24,12 @@
   border-top: 2px solid #E6E6F0;
   display: flex;
   flex-direction: column;
+  width: 100%;
   max-width: 650px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
   & .section-title {
     margin-bottom: 0;
