--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -22,3 +22,5 @@ $article-image: (
  "gdpr": "../images/articles/gdpr.png",
  "millennial": "../images/articles/millennial-testament.png"
 );
+
+$hover-color: #F0145A;
