--- a/assets/sass/_sharedElements.scss
+++ b/assets/sass/_sharedElements.scss
@@ -28,7 +28,7 @@
   }
 
   &:hover {
-    color: #F0145A;
+    color: variables.$hover-color;
     &::after {
       background-image: url("../images/services/arrow-services-on-hover.png");
     }
@@ -44,6 +44,20 @@
   -webkit-text-fill-color: transparent;
   margin-top: 0;
   margin-bottom: 30px;
+}
+
+.tel {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: right;
+  color: #46466E;
+  text-decoration: none;
+  white-space: nowrap;
+
+  &-header {
+    color: #FFFFFF;
+  }
 }
 
 @media (min-width: map-get(variables.$screen-size, "tablet")) {
