--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -325,6 +325,10 @@ template {
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: Montserrat, sans-serif;
 }
@@ -399,6 +403,19 @@ body {
   -webkit-text-fill-color: transparent;
   margin-top: 0;
   margin-bottom: 30px;
+}
+
+.tel {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: right;
+  color: #46466E;
+  text-decoration: none;
+  white-space: nowrap;
+}
+.tel-header {
+  color: #FFFFFF;
 }
 
 @media (min-width: 768px) {
@@ -824,6 +841,7 @@ body {
 }
 
 .offers {
+  padding-top: 30px;
   padding-bottom: 30px;
 }
 
@@ -1023,15 +1041,8 @@ body {
 .social-media svg {
   display: block;
 }
-
-.tel {
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 20px;
-  text-align: right;
-  color: #46466E;
-  text-decoration: none;
-  white-space: nowrap;
+.social-media svg:hover * {
+  fill: #F0145A;
 }
 
 .mail {
@@ -1040,6 +1051,9 @@ body {
   line-height: 20px;
   color: #24A3FF;
   text-decoration: none;
+}
+.mail:hover {
+  color: #F0145A;
 }
 
 .copyright {
@@ -1109,7 +1123,7 @@ body {
     right: 0;
   }
 }
-.layer {
+.layer-modal {
   background-color: rgba(50, 50, 100, 0.7);
   position: fixed;
   top: 0;
@@ -1157,6 +1171,7 @@ body {
   align-items: center;
   padding-left: 0;
   padding-right: 0;
+  cursor: pointer;
 }
 .close-button:hover {
   background-color: #E6E6F0;
@@ -1204,6 +1219,217 @@ body {
   background-color: #24A3FF;
   box-shadow: 0 0 20px rgba(36, 163, 255, 0.5);
   border-radius: 12px;
+}
+
+.hero-section {
+  background-image: url("../images/heroSection/hero-background.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-bottom: 60px;
+}
+
+.head-wrap {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.header-top {
+  background-color: rgba(245, 245, 250, 0.2);
+  display: flex;
+  justify-content: space-between;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.header-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 10px;
+  position: relative;
+}
+
+.localization {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.language {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 1px;
+  color: #FFFFFF;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 5px 7px;
+}
+.language-active {
+  background: #F0145A;
+  border-radius: 8px;
+}
+
+.contacts-header {
+  display: flex;
+  align-items: center;
+}
+
+.breadcrumbs {
+  display: flex;
+}
+
+.current-page {
+  display: block;
+  text-decoration: none;
+  font-size: 20px;
+  line-height: 24px;
+  color: #FFFFFF;
+}
+
+.logo-link {
+  padding-right: 16px;
+  margin-right: 4px;
+  position: relative;
+}
+.logo-link:after {
+  content: "";
+  width: 12px;
+  height: 26px;
+  background-image: url("../images/heroSection/slash.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.main-logo {
+  height: 32px;
+  width: 70px;
+  display: block;
+}
+
+.page-title {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.hero-title {
+  font-weight: 700;
+  font-size: 38px;
+  line-height: 46px;
+  text-align: center;
+  color: #FFFFFF;
+  margin: 0 auto;
+}
+
+.hero-action {
+  display: flex;
+  justify-content: center;
+}
+
+.scroll-button {
+  text-decoration: none;
+}
+.scroll-button svg {
+  display: block;
+}
+.scroll-button:hover * {
+  stroke: #F0145A;
+}
+
+.nav-menu-button {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  cursor: pointer;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+}
+.nav-menu-button:hover {
+  background: #E6E6F0;
+}
+.nav-menu-button:hover * {
+  stroke: #323264;
+}
+
+@media (min-width: 768px) {
+  .logo-link:after {
+    display: none;
+  }
+  .current-page {
+    display: none;
+  }
+  .main-logo {
+    height: 60px;
+    width: 130px;
+  }
+}
+@media (min-width: 1024px) {
+  .hero-section {
+    background-size: contain;
+  }
+}
+.layer-nav-menu {
+  background-color: rgba(50, 50, 100, 0.7);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: none;
+}
+
+.layer-show {
+  display: block;
+}
+
+.nav-menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 15px;
+  padding: 64px 12px 12px;
+  background-color: #FFFFFF;
+  border-radius: 12px 12px 0 0;
+  width: calc(100% - 16px);
+  position: absolute;
+  bottom: 0;
+  left: 8px;
+}
+
+.nav-link {
+  display: block;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 29px;
+  color: #24A3FF;
+  text-decoration: none;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  text-align: center;
+  background-color: #F5F5FA;
+  border-radius: 12px;
+}
+.nav-link:hover {
+  background-color: #E6E6F0;
+}
+.nav-link-active {
+  color: #F0145A;
+}
+
+.close-nav-menu {
+  position: absolute;
+  top: 12px;
+  right: 12px;
 }
 
 /*# sourceMappingURL=style.css.map */
