--- a/assets/sass/_hero.scss
+++ b/assets/sass/_hero.scss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding-bottom: 60px;
+  padding-bottom: 30px;
 }
 
 .head-wrap {
@@ -147,6 +147,10 @@
 }
 
 @media (min-width: map-get(variables.$screen-size, "tablet")) {
+  .hero-section {
+    padding-bottom: 60px;
+  }
+
   .logo-link:after {
     display: none;
   }
