--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -996,6 +996,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-style: normal;
 }
 
 .geolocation {
@@ -1230,7 +1231,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding-bottom: 60px;
+  padding-bottom: 30px;
 }
 
 .head-wrap {
@@ -1362,6 +1363,9 @@ body {
 }
 
 @media (min-width: 768px) {
+  .hero-section {
+    padding-bottom: 60px;
+  }
   .logo-link:after {
     display: none;
   }
