--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1239,22 +1239,6 @@ body {
   padding-right: 15px;
 }
 
-.header-top {
-  background-color: rgba(245, 245, 250, 0.2);
-  display: flex;
-  justify-content: space-between;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-.header-bottom {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 10px;
-  position: relative;
-}
-
 .localization {
   display: flex;
   justify-content: space-between;
@@ -1274,41 +1258,6 @@ body {
 .language-active {
   background: #F0145A;
   border-radius: 8px;
-}
-
-.contacts-header {
-  display: flex;
-  align-items: center;
-}
-
-.breadcrumbs {
-  display: flex;
-}
-
-.current-page {
-  display: block;
-  text-decoration: none;
-  font-size: 20px;
-  line-height: 24px;
-  color: #FFFFFF;
-}
-
-.logo-link {
-  padding-right: 16px;
-  margin-right: 4px;
-  position: relative;
-}
-.logo-link:after {
-  content: "";
-  width: 12px;
-  height: 26px;
-  background-image: url("../images/heroSection/slash.png");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  position: absolute;
-  top: 0;
-  right: 0;
 }
 
 .main-logo {
@@ -1346,31 +1295,13 @@ body {
   stroke: #F0145A;
 }
 
-.nav-menu-button {
-  border: none;
-  background-color: transparent;
-  padding: 0;
-  cursor: pointer;
-  border-radius: 8px;
-  display: flex;
-  align-items: center;
-}
-.nav-menu-button:hover {
-  background: #E6E6F0;
-}
-.nav-menu-button:hover * {
-  stroke: #323264;
-}
-
 @media (min-width: 768px) {
   .hero-section {
     padding-bottom: 60px;
   }
-  .logo-link:after {
-    display: none;
-  }
-  .current-page {
-    display: none;
+  .logo-link {
+    padding-right: 0;
+    margin-right: 0;
   }
   .main-logo {
     height: 60px;
@@ -1434,6 +1365,79 @@ body {
   position: absolute;
   top: 12px;
   right: 12px;
+}
+
+.header-top {
+  background-color: rgba(245, 245, 250, 0.2);
+  display: flex;
+  justify-content: space-between;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.header-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 10px;
+  position: relative;
+}
+
+.contacts-header {
+  display: flex;
+  align-items: center;
+}
+
+.breadcrumbs {
+  display: flex;
+}
+
+.current-page {
+  display: block;
+  text-decoration: none;
+  font-size: 20px;
+  line-height: 24px;
+  color: #FFFFFF;
+}
+
+.logo-link {
+  padding-right: 16px;
+  margin-right: 4px;
+  position: relative;
+}
+.logo-link:after {
+  content: "";
+  width: 12px;
+  height: 26px;
+  background-image: url("../images/heroSection/slash.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.nav-menu-button {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  cursor: pointer;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+}
+.nav-menu-button:hover {
+  background: #E6E6F0;
+}
+.nav-menu-button:hover * {
+  stroke: #323264;
+}
+
+@media (min-width: 768px) {
+  .header-mobile {
+    display: none;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
