Add desktop header

--- a/assets/sass/_header-mobile.scss
+++ b/assets/sass/_header-mobile.scss
@@ -74,4 +74,13 @@
   .header-mobile {
   display: none;
   }
+
+  .logo-link {
+    padding-right: 0;
+    margin-right: 0;
+
+    &:after {
+      display: none;
+    }
+  }
 }
