--- a/assets/sass/_footer.scss
+++ b/assets/sass/_footer.scss
@@ -1,17 +1,5 @@
 @use "variables";
 
-@mixin getContactsDelimiter {
-  content: "";
-  width: 6px;
-  height: 6px;
-  background-color: #B3B3BA;
-  border-radius: 50%;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  right: -16px;
-}
-
 .footer {
   background-color: #F5F5FA;
 }
@@ -126,7 +114,7 @@
   }
 
   .street::after {
-    @include getContactsDelimiter();
+    @include variables.getContactsDelimiter();
   }
 
   .contacts {
@@ -140,7 +128,7 @@
     }
 
     & > a:not(:last-child)::after {
-      @include getContactsDelimiter();
+      @include variables.getContactsDelimiter();
     }
   }
 
