--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1299,10 +1299,6 @@ body {
   .hero-section {
     padding-bottom: 60px;
   }
-  .logo-link {
-    padding-right: 0;
-    margin-right: 0;
-  }
   .main-logo {
     height: 60px;
     width: 130px;
@@ -1437,6 +1433,105 @@ body {
 @media (min-width: 768px) {
   .header-mobile {
     display: none;
+  }
+  .logo-link {
+    padding-right: 0;
+    margin-right: 0;
+  }
+  .logo-link:after {
+    display: none;
+  }
+}
+.header {
+  display: none;
+  padding-top: 50px;
+}
+
+.header-wrapper {
+  padding-left: 60px;
+  padding-right: 60px;
+}
+
+.header-container {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  position: relative;
+}
+
+.address-header {
+  display: flex;
+  align-items: center;
+  font-style: normal;
+}
+
+.street-header {
+  color: #B3B3BA;
+}
+.street-header::after {
+  display: none;
+}
+
+.header-address-item {
+  padding-left: 18px;
+  position: relative;
+}
+.header-address-item::before {
+  content: "";
+  width: 6px;
+  height: 6px;
+  background-color: #B3B3BA;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: -16px;
+  left: 6px;
+}
+
+.navigation {
+  display: flex;
+  gap: 15px;
+}
+
+.header-nav-link {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 20px;
+  text-align: right;
+  color: #FFFFFF;
+  text-decoration: none;
+  padding-bottom: 3px;
+  display: block;
+  border-bottom: 2px solid transparent;
+}
+.header-nav-link:hover {
+  border-bottom: 2px solid #FFFFFF;
+}
+
+@media (min-width: 768px) {
+  .header {
+    display: block;
+  }
+}
+@media (min-width: 1024px) {
+  .logo-link {
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .header-container {
+    align-items: flex-end;
+    gap: 16px;
+  }
+}
+@media (min-width: 1920px) {
+  .header-wrapper {
+    padding-left: 160px;
+    padding-right: 160px;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 1920px;
   }
 }
 
