--- a/assets/sass/_header.scss
+++ b/assets/sass/_header.scss
@@ -60,6 +60,14 @@
   &:hover {
     border-bottom: 2px solid #FFFFFF;
   }
+
+  &.nav-link-active {
+    color: variables.$hover-color;
+  }
+
+  &.nav-link-active:hover {
+    border-bottom: 2px solid variables.$hover-color;
+  }
 }
 
 @media (min-width: map-get(variables.$screen-size, "tablet")) {
