--- a/assets/sass/_publications.scss
+++ b/assets/sass/_publications.scss
@@ -2,8 +2,12 @@
 
 .publications {
   padding-top: 30px;
-  padding-bottom: 30px;
   background-color: #F5F5FA;
+}
+
+.articles {
+  border-bottom: 2px solid #E6E6F0;
+  padding-bottom: 30px;
 }
 
 .article-banner {
