--- a/assets/sass/_scaffolder.scss
+++ b/assets/sass/_scaffolder.scss
@@ -20,6 +20,7 @@ body {
 
 .top-section {
   padding-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 .group-top-sections {
@@ -30,6 +31,10 @@ body {
   .wrapper {
     padding-left: 60px;
     padding-right: 60px;
+  }
+
+  .top-section {
+    margin-bottom: 60px;
   }
 }
 
