--- a/assets/sass/_services.scss
+++ b/assets/sass/_services.scss
@@ -6,6 +6,10 @@
   position: relative;
   border-radius: 0 0 12px 12px;
 
+  &-page {
+    padding-top: 40px;
+  }
+
   &::before {
     content: " ";
     height: 10px;
@@ -68,6 +72,10 @@
 }
 
 @media (min-width: map-get(variables.$screen-size, "tablet")) {
+  .services-page {
+    padding-top: 60px;
+  }
+
   .services-wrapper {
     padding-left: 60px;
     padding-right: 60px;
