--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -20,7 +20,9 @@ $client-background: (
 $article-image: (
  "equity": "../images/articles/equity-associate.png",
  "gdpr": "../images/articles/gdpr.png",
- "millennial": "../images/articles/millennial-testament.png"
+ "millennial": "../images/articles/millennial-testament.png",
+ "language": "../images/articles/language.png",
+ "reimbursement": "../images/articles/reimbursement.png",
 );
 
 $hover-color: #F0145A;
