--- a/assets/sass/_service-modal.scss
+++ b/assets/sass/_service-modal.scss
@@ -1,3 +1,5 @@
+@use "variables";
+
 @mixin getPlaceholderStyles() {
   font-size: 16px;
   line-height: 26px;
@@ -21,7 +23,6 @@
 .service-modal {
   padding: 30px;
   background-color: #F5F5FA;
-  border-top: 2px solid #E6E6F0;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -30,6 +31,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  box-shadow: 0 15px 80px rgba(40, 40, 86, 0.5);
 
   & .section-title {
     margin-bottom: 0;
@@ -76,6 +78,11 @@
   &::placeholder {
     @include getPlaceholderStyles();
   }
+
+  &:focus {
+    outline: none;
+    border: 1px solid #24A3FF;
+  }
 }
 
 .callback {
@@ -101,4 +108,15 @@
   background-color: #24A3FF;
   box-shadow: 0 0 20px rgba(36, 163, 255, 0.5);
   border-radius: 12px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: #0085FF;
+  }
+}
+
+@media (min-width: 650px) {
+  .service-modal {
+    border-radius: 12px;
+  }
 }
