--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1104,7 +1104,7 @@ body {
 }
 
 @media (min-width: 768px) {
-  .contact-info {
+  .main-footer .contact-info {
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
@@ -1131,7 +1131,7 @@ body {
   .contacts {
     flex-direction: row;
     align-items: center;
-    margin-bottom: 0;
+    margin-bottom: 30px;
     gap: 26px;
   }
   .contacts > a {
@@ -1148,13 +1148,26 @@ body {
     transform: translateY(-50%);
     right: -16px;
   }
-  .copyright {
+  .main-footer .contacts {
+    margin-bottom: 0;
+  }
+  .main-footer .copyright {
     width: 50%;
   }
-  .copyright > p {
+  .main-footer .copyright > p {
     position: absolute;
     top: 0;
     right: 0;
+  }
+}
+@media (min-width: 1024px) {
+  .contact-info {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+  .contacts {
+    margin-bottom: 0;
   }
 }
 .layer-modal {
@@ -1174,7 +1187,6 @@ body {
 .service-modal {
   padding: 30px;
   background-color: #F5F5FA;
-  border-top: 2px solid #E6E6F0;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -1183,6 +1195,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  box-shadow: 0 15px 80px rgba(40, 40, 86, 0.5);
 }
 
 .service-modal .section-title {
@@ -1233,6 +1246,11 @@ body {
   color: #B3B3BA;
 }
 
+.personal-info:focus {
+  outline: none;
+  border: 1px solid #24A3FF;
+}
+
 .callback {
   margin-top: 0;
   margin-bottom: 15px;
@@ -1256,8 +1274,18 @@ body {
   background-color: #24A3FF;
   box-shadow: 0 0 20px rgba(36, 163, 255, 0.5);
   border-radius: 12px;
+  cursor: pointer;
 }
 
+.send-form:hover {
+  background-color: #0085FF;
+}
+
+@media (min-width: 650px) {
+  .service-modal {
+    border-radius: 12px;
+  }
+}
 .hero-section {
   background-image: url("../images/heroSection/hero-background.svg");
   background-size: cover;
@@ -1990,6 +2018,118 @@ body {
 }
 @media (min-width: 1920px) {
   .wrap-art {
+    padding-left: 280px;
+    padding-right: 280px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+.contact-information {
+  font-style: normal;
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-detail {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.contact-detail:not(:last-child) {
+  border-bottom: 4px solid #E6E6F0;
+}
+
+.contact-street {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.contact-street {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 21px;
+  line-height: 30px;
+  color: #323264;
+}
+
+.dial-up-info {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.contact-tel {
+  font-size: 21px;
+  line-height: 30px;
+  color: #46466E;
+  text-decoration: none;
+}
+
+.contact-mail {
+  font-size: 21px;
+  line-height: 30px;
+  color: #24A3FF;
+  text-decoration: none;
+}
+
+.contact-social {
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.contact-social-desc {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 16px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #24A3FF;
+}
+
+.service-modal.contact {
+  position: static;
+  transform: none;
+  box-shadow: none;
+  border-radius: 12px;
+  max-width: 100%;
+}
+
+.contact-form {
+  margin-bottom: 30px;
+}
+
+@media (min-width: 768px) {
+  .contact-form {
+    margin-bottom: 60px;
+  }
+  .contact-detail:last-child {
+    padding-bottom: 60px;
+  }
+  .contact-detail:first-child {
+    padding-top: 0;
+  }
+}
+@media (min-width: 1024px) {
+  .contact-form {
+    display: flex;
+    justify-content: space-between;
+  }
+  .contact-section {
+    width: calc(50% - 30px);
+  }
+}
+@media (min-width: 1440px) {
+  .wrap-contact {
+    padding-left: 180px;
+    padding-right: 180px;
+  }
+}
+@media (min-width: 1920px) {
+  .wrap-contact {
     padding-left: 280px;
     padding-right: 280px;
     margin-left: auto;
